corrected the size of the canvas and the div wrapping it, size of the canvas from js file perspective

--- a/css/satellite.css
+++ b/css/satellite.css
@@ -192,10 +192,10 @@ body main {
 }
 
 #canvas_mic_section {
-    height:100%;
-    /* overflow: hidden; */
+    height:80%;
+    overflow: hidden;
     box-sizing: border-box;
-    padding-top: 100px;
+    padding: 10px;
     
 }
 
@@ -215,11 +215,14 @@ main section video {
     display:none;
 }
 
-/* #canvas_mic_section {
-    height: 800px;
-} */
+#canvas_mic_section {
+    height: 600px;
+    /* overflow: hidden; */
+}
 #sketch-div {
-    /* height:100%; */
+    width: 100%;
+    height: 90%;
+    overflow: hidden;
 }
 
 
